--- a/index.html
+++ b/index.html
@@ -5,33 +5,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UntrainedModel - Free AI Tools for Content & Code Generation</title>
-  <meta name="description" content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude. Free AI playground for developers, creators, and businesses." />
+  <meta name="description"
+    content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude. Free AI playground for developers, creators, and businesses." />
   <link rel="icon" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" type="image/png">
   <meta name="author" content="Deep Boda" />
 
   <meta property="og:title" content="UntrainedModel - Free AI Tools for Content & Code Generation" />
-  <meta property="og:description" content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude." />
+  <meta property="og:description"
+    content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.untrainedmodel.xyz" />
-  <meta property="og:image" content="https://www.untrainedmodel.xyz/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
-  
+  <meta property="og:url" content="https://untrainedmodel.xyz" />
+  <meta property="og:image" content="https://untrainedmodel.xyz/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="UntrainedModel - Free AI Tools for Content & Code Generation" />
-  <meta name="twitter:description" content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude." />
-  <meta name="twitter:image" content="https://www.untrainedmodel.xyz/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
-  
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script>
+  <meta name="twitter:description"
+    content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude." />
+  <meta name="twitter:image" content="https://untrainedmodel.xyz/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
 
-  <!-- <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 </head>
 
 <body>
