--- a/index.html
+++ b/index.html
@@ -4,24 +4,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UntrainedModel - Free AI Tools for Content & Code Generation</title>
+  <title>UntrainedModel - Professional AI Platform for Content, Code & Design</title>
   <meta name="description"
-    content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude. Free AI playground for developers, creators, and businesses." />
+    content="Transform your workflow with advanced AI technology. Generate professional content, production-ready code, and stunning visuals using GPT-4, Claude 3, and Gemini Pro. Trusted by 5,000+ creators worldwide." />
+  <meta name="keywords" content="AI platform, GPT-4, Claude 3, Gemini Pro, content creation, code generation, AI tools, artificial intelligence, machine learning, productivity, automation, AI playground, developer tools, creative AI" />
   <link rel="icon" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" type="image/png">
-  <meta name="author" content="Deep Boda" />
-
-  <meta property="og:title" content="UntrainedModel - Free AI Tools for Content & Code Generation" />
-  <meta property="og:description"
-    content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude." />
+  <link rel="canonical" href="https://untrainedmodel.xyz" />
+  <meta name="author" content="UntrainedModel Team" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="theme-color" content="#6366f1" />
+  <meta name="msapplication-TileColor" content="#6366f1" />
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://untrainedmodel.xyz" />
+  <meta property="og:title" content="UntrainedModel - Professional AI Platform for Content, Code & Design" />
+  <meta property="og:description"
+    content="Transform your workflow with advanced AI technology. Generate professional content, production-ready code, and stunning visuals using GPT-4, Claude 3, and Gemini Pro." />
   <meta property="og:image" content="https://untrainedmodel.xyz/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="UntrainedModel" />
+  <meta property="og:locale" content="en_US" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="UntrainedModel - Free AI Tools for Content & Code Generation" />
+  <meta name="twitter:url" content="https://untrainedmodel.xyz" />
+  <meta name="twitter:title" content="UntrainedModel - Professional AI Platform for Content, Code & Design" />
   <meta name="twitter:description"
-    content="Access powerful AI tools for free. Generate high-quality content, code, and images using GPT-4, Gemini, and Claude." />
+    content="Transform your workflow with advanced AI technology. Generate professional content, production-ready code, and stunning visuals using GPT-4, Claude 3, and Gemini Pro." />
   <meta name="twitter:image" content="https://untrainedmodel.xyz/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
+  <meta name="twitter:creator" content="@untrainedmodel" />
+  <meta name="twitter:site" content="@untrainedmodel" />
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="application-name" content="UntrainedModel" />
+  <meta name="apple-mobile-web-app-title" content="UntrainedModel" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="format-detection" content="telephone=no" />
+  
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
+  
+  <!-- Microsoft Tiles -->
+  <meta name="msapplication-config" content="/browserconfig.xml" />
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "UntrainedModel",
+    "description": "Professional AI platform for content creation, code generation, and design using advanced AI models like GPT-4, Claude 3, and Gemini Pro.",
+    "url": "https://untrainedmodel.xyz",
+    "applicationCategory": "ProductivityApplication",
+    "operatingSystem": "Web Browser",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.6",
+      "ratingCount": "1847"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "UntrainedModel",
+      "url": "https://untrainedmodel.xyz"
+    }
+  }
+  </script>
 
 </head>
 
