--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <title>UntrainedModel - Professional AI Platform for Content, Code & Design</title>
   <meta name="description"
     content="Transform your workflow with advanced AI technology. Generate professional content, production-ready code, and stunning visuals using GPT-4, Claude 3, and Gemini Pro. Trusted by 5,000+ creators worldwide." />
-  <meta name="keywords" content="AI platform, GPT-4, Claude 3, Gemini Pro, content creation, code generation, AI tools, artificial intelligence, machine learning, productivity, automation, AI playground, developer tools, creative AI" />
+  <meta name="keywords"
+    content="AI platform, GPT-4, Claude 3, Gemini Pro, content creation, code generation, AI tools, artificial intelligence, machine learning, productivity, automation, AI playground, developer tools, creative AI" />
   <link rel="icon" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" type="image/png">
   <link rel="canonical" href="https://untrainedmodel.xyz" />
   <meta name="author" content="UntrainedModel Team" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="theme-color" content="#6366f1" />
   <meta name="msapplication-TileColor" content="#6366f1" />
-  
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://untrainedmodel.xyz" />
@@ -44,17 +45,17 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="format-detection" content="telephone=no" />
-  
+
   <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json" />
-  
+
   <!-- Apple Touch Icons -->
   <link rel="apple-touch-icon" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" />
-  
+
   <!-- Microsoft Tiles -->
   <meta name="msapplication-config" content="/browserconfig.xml" />
-  
+
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
@@ -82,10 +83,13 @@
     }
   }
   </script>
-
+  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
 </head>
 
 <body>
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-3606235083263616">
+  </amp-auto-ads>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
