--- a/index.html
+++ b/index.html
@@ -83,13 +83,11 @@
     }
   }
   </script>
-  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3606235083263616"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <amp-auto-ads type="adsense" data-ad-client="ca-pub-3606235083263616">
-  </amp-auto-ads>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
