--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UntrainedModel - Professional AI Platform for Content, Code & Design</title>
   <meta name="description"
-    content="Transform your workflow with advanced AI technology. Generate professional content, production-ready code, and stunning visuals using GPT-4, Claude 3, and Gemini Pro. Trusted by 5,000+ creators worldwide." />
+    content="India's #1 Free AI Platform. Access ChatGPT-4, Gemini 2.0, and Claude 3 instantly without signup. Perfect for students (JEE/NEET), developers, and creators. Supports Hindi & Hinglish." />
   <meta name="keywords"
-    content="AI platform, GPT-4, Claude 3, Gemini Pro, content creation, code generation, AI tools, artificial intelligence, machine learning, productivity, automation, AI playground, developer tools, creative AI" />
+    content="free AI India, ChatGPT-4 free, Gemini 2.0 India, Claude 3 free, AI for students, JEE NEET AI help, coding AI India, content writing AI, Hindi AI chatbot, no signup AI" />
   <link rel="icon" href="/uploads/bccee730-0f1a-4541-8c9f-4760c42f0c75.png" type="image/png">
   <link rel="canonical" href="https://untrainedmodel.xyz" />
   <meta name="author" content="UntrainedModel Team" />
@@ -84,7 +84,7 @@
   }
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3606235083263616"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
